[gd_scene load_steps=3 format=3 uid="uid://2qamkxaa0bsa"]

[ext_resource type="Script" path="res://scripts/MainMenu.gd" id="1_p0vnk"]
[ext_resource type="Theme" uid="uid://cncad21dpu0pc" path="res://hud_large_theme.tres" id="1_txvhm"]

[node name="MainMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p0vnk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_txvhm")
theme_override_font_sizes/font_size = 96
text = "The Great Invasion"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16

[node name="PlayButton" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Play"

[node name="MuteMusic" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Mute Music: Off"

[node name="SkipAnimations" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Skip Animations: Off"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/MuteMusic" to="." method="_on_mute_music_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/SkipAnimations" to="." method="_on_skip_animations_pressed"]
